--- a/concourse/pipelines/templates/gpdb-tpl.yml
+++ b/concourse/pipelines/templates/gpdb-tpl.yml
@@ -1785,6 +1785,26 @@ jobs:
       BEHAVE_TAGS: gpcheck_as_gpadmin
       GPCHECK_SETUP: true
 
+- name: gpmovemirrors_single_host
+  plan:
+    - aggregate: &gets_for_behave
+        - get: gpdb_src
+          params:
+            submodules:
+              - gpMgmt/bin/pythonSrc/ext
+          passed: [gate_cli_start]
+        - get: bin_gpdb
+          resource: bin_gpdb_centos6
+          passed: [gate_cli_start]
+          trigger: [[ test_trigger ]]
+        - get: gpdb6-centos6-test
+    - task: gpmovemirrors_single_host
+      file: gpdb_src/concourse/tasks/behave_gpdb.yml
+      image: gpdb6-centos6-test
+      params:
+        BEHAVE_TAGS: gpmovemirrors_single_host
+        GPCHECK_SETUP: false
+
 {% for test_name in CLI_2_suites %}
 - name: [[ test_name ]]
   plan:
@@ -1884,44 +1904,62 @@ jobs:
   ensure:
     <<: *set_failed
 
-- name: gpmovemirrors_single_host
-  plan:
-    - aggregate:
-        - get: gpdb_src
-          params:
-            submodules:
-              - gpMgmt/bin/pythonSrc/ext
-          passed: [gate_cli_start]
-        - get: gpdb_binary
-          resource: bin_gpdb_centos6
-          passed: [gate_cli_start]
-          trigger: [[ test_trigger ]]
-        - get: ccp_src
-        - get: ccp-image
-    - put: terraform
-      params:
-        <<: *ccp_default_params
-        vars:
-          <<: *ccp_default_vars
-          number_of_nodes: 4
-    - task: gen_cluster
-      file: ccp_src/ci/tasks/gen_cluster.yml
-      params:
-        <<: *ccp_gen_cluster_default_params
-#    - task: gpinitsystem
-#      file: ccp_src/ci/tasks/gpinitsystem.yml
-    - task: create_demo_cluster
-      file: gpdb_src/concourse/tasks/create_demo_cluster.yml
-      image: ccp-image
-    - task: run_tests
-      file: gpdb_src/concourse/tasks/run_behave_single_host.yml
-      image: ccp-image
-      params:
-        BEHAVE_FLAGS: --tags=gpmovemirrors_single_host
-      on_success:
-        <<: *ccp_destroy
-  ensure:
-    <<: *set_failed
+#- name: gpmovemirrors_single_host
+#  plan:
+#    - aggregate:
+#        - get: gpdb_src
+#          params:
+#            submodules:
+#              - gpMgmt/bin/pythonSrc/ext
+#          passed: [gate_cli_start]
+#        - get: gpdb_binary
+#          resource: bin_gpdb_centos6
+#          passed: [gate_cli_start]
+#          trigger: [[ test_trigger ]]
+#        - get: ccp_src
+#        - get: ccp-image
+#    - put: terraform
+#      params:
+#        <<: *ccp_default_params
+#        vars:
+#          <<: *ccp_default_vars
+#          number_of_nodes: 4
+#    - task: gen_cluster
+#      file: ccp_src/ci/tasks/gen_cluster.yml
+#      params:
+#        <<: *ccp_gen_cluster_default_params
+##    - task: gpinitsystem
+##      file: ccp_src/ci/tasks/gpinitsystem.yml
+#    - task: create_demo_cluster
+#      file: gpdb_src/concourse/tasks/create_demo_cluster.yml
+#      image: ccp-image
+#    - task: run_tests
+#      file: gpdb_src/concourse/tasks/run_behave_single_host.yml
+#      image: ccp-image
+#      params:
+#        BEHAVE_FLAGS: --tags=gpmovemirrors_single_host
+#      on_success:
+#        <<: *ccp_destroy
+#  ensure:
+#    <<: *set_failed
+    
+#- name: gpmovemirrors_single_host
+#  plan:
+#    - aggregate:
+#        - get: gpdb_src
+#          passed: [compile_gpdb_centos6]
+#        - get: bin_gpdb
+#          resource: bin_gpdb_centos6
+#          passed: [compile_gpdb_centos6]
+#          trigger: [[ test_trigger ]]
+#        - get: gpdb6-centos6-test
+#    - task: ic_gpdb
+#      file: gpdb_src/concourse/tasks/ic_gpdb.yml
+#      image: gpdb6-centos6-test
+#      params:
+#        MAKE_TEST_COMMAND: -C gpMgmt behave tags=gpmovemirrors_single_host
+#        TEST_OS: centos
+#        CONFIGURE_FLAGS: {{configure_flags}}
 
 {% if "centos6" in os_types and "ICW" in test_sections %}
 - name: pg_upgrade
