CI: Add support for Ubuntu in gpMgmt tests.
We have added Ubuntu 18.04 support for all CLI tests.

Co-authored-by: Jacob Champion <pchampion@pivotal.io>

--- a/concourse/tasks/run_behave_on_ccp_cluster.yml
+++ b/concourse/tasks/run_behave_on_ccp_cluster.yml
@@ -20,6 +20,9 @@ run:
         set -ex
         if which yum > /dev/null; then
             sudo yum install -y patchelf
+        elif which apt > /dev/null; then
+            sudo apt update
+            sudo apt install patchelf
         else
             set +x
             echo \"ERROR: install_python_hacks() does not support the current platform and should be modified\"
